--- a/css/styles.css
+++ b/css/styles.css
@@ -36,8 +36,7 @@ ul {
   padding: 0 0px;
   flex-wrap: wrap ;
 }
-
-html {
+ .page {
     height: 100%;
 }
 
@@ -52,8 +51,7 @@ html {
 
 }
 
-body {
-  /*  min-width: 1220px;*/
+.page-body {
   padding: 0;
   margin: 0;
   font-family: Cuprum, Arial, sans-serif;
