--- a/css/styles.css
+++ b/css/styles.css
@@ -755,7 +755,7 @@ input.search:focus + label>svg {
 .services__container p {
   margin-right: 535px;
   margin-bottom: 70px;
-  margin-top: 10px;
+  margin-top: 13px;
 }
 
 .services-menu {
@@ -795,19 +795,47 @@ input.search:focus + label>svg {
 }
 
 /* Прячем блоки */
+/* .services-menu__credit-text, */
 .services-menu__ship-text,
-.services-menu__guarantee-text {
+.services-menu__guarantee-text
+{
   display: none;
 }
 /* ship-text */
+
+.services-menu__ship-text  {
+  position: relative;
+}
+
 .services-menu__ship-text h2 {
   margin: 0;
   margin-bottom: 29px;
 }
 
+.services-menu__ship-text::before {
+  content: "";
+  background-image: url("../img/service-shipping.png");
+  width: 468px;
+  height: 261px;
+  right: 4px;
+  top: 18px;
+  background-repeat: no-repeat;
+  position: absolute;
+}
+
 .services-menu__ship-text :nth-child(2) {
   margin: 0;
   margin-right: 340px;
+}
+
+.services-menu__credit-text::before {
+  content: "";
+  background-image: url("../img/service-credit.png");
+  width: 465px;
+  height: 285px;
+  right: -12px;
+  background-repeat: no-repeat;
+  position: absolute;
 }
 
 .services-menu__ship-text :nth-child(3) {
@@ -820,12 +848,38 @@ input.search:focus + label>svg {
   margin-bottom: 27px;
 }
 
+.services-menu__credit-text  {
+  position: relative;
+}
+
 .services-menu__credit-text a {
   margin-top: 26px;
   margin-right: 425px;
 }
 
 /* guarantee-text */
+
+.services-menu__guarantee-text {
+  position: relative;
+}
+
+.services-menu__guarantee-text::before  {
+  content: "";
+  background-image: url("../img/service-guarantee.png");
+  width: 389px;
+  height: 283px;
+  right: -8px;
+  background-repeat: no-repeat;
+  position: absolute;
+}
+
+.services-menu__guarantee-text h2 {
+  margin-bottom: 24px;
+}
+
+.services-menu__guarantee-text p {
+  margin-right: 302px;
+}
 
 .mart-info {
   margin: 0;
