--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,7 @@
   --basic-extra-greylight: #B5B5B5;
   --basic-greylight-opacity-03:rgba(197, 197, 197, 0.3);
   --basic-red: #EE3643;
+  --special-darkred: #CA2C37;
   --basic-darkred:  #BA2732;
   --basic-green: #63A63E;
   --basic-black: #000000;
@@ -30,6 +31,7 @@
   --special-green: #8ED78F;
   --special-extra-navy: #212A3A;
   --special-extra-greylight: #EAEAEA;
+  --test-color: #405069;
 }
 
 .container  {
@@ -45,14 +47,6 @@
 }
 
 /*Global*/
-
-.visually-hidden {
-    position: absolute;
-    clip: rect(0 0 0 0);
-    width: 1px;
-    height: 1px;
-    margin: -1px;
-}
 
 .page-body {
   font-family: Cuprum, Arial, sans-serif;
@@ -84,6 +78,9 @@
 .actual-price,
 .shipping-info,
 .rights p,
+.plate-title,
+.plate-perfs__title,
+.plate-perfs__description,
 .label-new h4 {
   margin: 0;
 }
@@ -101,7 +98,7 @@
 .shipping-company,
 .footer-navigation,
 .category,
-.login-field   {
+.login-field {
   margin: 0;
   padding: 0;
   list-style: none;
@@ -279,10 +276,11 @@ img {
 
 .user-navigation {
   display: flex;
-  width: 345px;
+  width: 281px;
   min-height: 45px;
   padding-top: 30px;
-  justify-content: flex-end;
+  /* justify-content: flex-end; */
+  margin-left: 67px;
 }
 
 .user-navigation li {
@@ -292,10 +290,13 @@ img {
 .user-navigation__signup {
   width: 100px;
   display: flex;
-  justify-content: center;
   align-items: center;
   padding-left:21px;
   margin-right: 12px;
+}
+
+.user-navigation__signup-link{
+  margin-left: 7px;
 }
 
 .user-navigation__registration {
@@ -377,7 +378,8 @@ input.search:focus + label>svg {
 .popular-product a ,
 .category-plate h2,
 .category-plate a,
-.services-menu__credit-text a {
+.services-menu__credit-text a,
+.plate-perfs__description {
   color: var(--basic-white);
 }
 
@@ -791,11 +793,34 @@ input.search:focus + label>svg {
 
 .plate-perfs {
   grid-area: perfs ;
-}
-
-.plate-perfs h2 {
   position: relative;
 }
+
+.plate-perfs__button-left{
+  position: absolute;
+  content: "";
+  width: 21px;
+  height: 40px;
+  background-repeat: no-repeat;
+  background-position: 0 0;
+  background-image: url("../img/icon-left.svg");
+  top: 122px;
+  left: 25px;
+}
+
+.plate-perfs__button-right {
+  position: absolute;
+  content: "";
+  width: 21px;
+  height: 40px;
+  background-repeat: no-repeat;
+  background-position: 0 0;
+  background-image: url("../img/icon-right.svg");
+  top: 123px;
+  right: 24px;
+}
+
+
 
 .plate-discount {
   position: relative;
@@ -923,24 +948,19 @@ input.search:focus + label>svg {
   align-items: center;
   justify-content: center;
   position: relative;
-  border-radius: 3px;
+  border-radius: 3px 0 0 3px;
 }
 
 .actual-price::after {
   content: "";
   position: absolute;
-  /* width: 20px;
-  height:38px; */
-  right: -17px;
+  right: -19px;
   width: 0;
   height: 0;
   border-top: 19px solid transparent;
   border-left: 19px solid var(--basic-red);
   border-bottom: 19px solid transparent;
 }
-
-}
-
 
 .index-columns {
   display: flex;
@@ -967,6 +987,10 @@ input.search:focus + label>svg {
   padding-bottom: 100px;
 }
 
+.services__container {
+  margin-bottom: 59px;
+}
+
 .services__container h2 {
   margin-top: 65px;
   margin-bottom: 11px;
@@ -974,7 +998,6 @@ input.search:focus + label>svg {
 
 .services__container p {
   margin-right: 535px;
-  margin-bottom: 70px;
   margin-top: 13px;
 }
 
@@ -985,7 +1008,7 @@ input.search:focus + label>svg {
   flex-direction: column;
 }
 
-.services-menu li {
+.services-menu__item {
   height: 61px;
   display: flex;
   align-items: center;
@@ -996,16 +1019,11 @@ input.search:focus + label>svg {
   line-height: 30px;
   color: var(--basic-white);
   background-color: var(--basic-grey);
+  box-shadow: 0px 1px 0px var(--basic-extra-dark), inset 0px 1px 0px var(--test-color);
 }
 
 .services-menu li:hover {
   background-color: var(--special-extra-dark );
-}
-
-.services-menu li:active {
-  background-color: var(--basic-white);
-  color: var(--basic-grey);
-
 }
 
 .services-menu__ship-text,
@@ -1014,13 +1032,7 @@ input.search:focus + label>svg {
   width: 620px;
 }
 
-/* Прячем блоки */
-.services-menu__credit-text,
-/* .services-menu__ship-text, */
-.services-menu__guarantee-text
-{
-  display: none;
-}
+
 
 /* ship-text */
 
@@ -1037,8 +1049,8 @@ input.search:focus + label>svg {
   background-image: url("../img/service-shipping.png");
   width: 468px;
   height: 261px;
-  right: 4px;
-  top: 18px;
+  right: 0px;
+  top: 20px;
   background-repeat: no-repeat;
   position: absolute;
 }
@@ -1099,6 +1111,12 @@ input.search:focus + label>svg {
   margin-right: 302px;
 }
 
+.services-menu__current {
+  background-color: var(--basic-white);
+  color: var(--basic-grey);
+}
+
+
 .mart-info {
   margin: 25px 0;
 }
@@ -1129,7 +1147,7 @@ input.search:focus + label>svg {
   line-height: 18px;
 }
 
-.category-plate a {
+.plate-button {
   display: flex;
   min-height: 38px;
   width: 135px;
@@ -1138,19 +1156,60 @@ input.search:focus + label>svg {
   align-items: center;
   text-transform: uppercase;
   font-family: Cuprum, Arial, sans-serif;
-  font-style: normal;
-  font-weight: normal;
   font-size: 14px;
   line-height: 18px;
   background-color: var(--basic-white-opacity-03);
 }
 
-.category-plate a:hover {
+.plate-button:hover {
   background-color: var(--basic-greylight-opacity-03);
 }
 
-.category-plate a:active {
+.plate-button:active {
   background-color: var(--special-greylight-opacity-03);
+}
+
+.plate-perfs__catalog-button {
+  display: flex;
+  min-height: 38px;
+  width: 135px;
+  justify-content: center;
+  align-items: center;
+  text-transform: uppercase;
+  font-family: Cuprum, Arial, sans-serif;
+  font-size: 14px;
+  line-height: 18px;
+  position: absolute;
+  min-width: 192px;
+  background-color: var(--basic-red);
+  bottom: 27px;
+  left: 24px;
+}
+
+.plate-perfs__catalog-button:hover {
+  background-color: var(--special-darkred);
+}
+
+.plate-perfs__catalog-button:active {
+  background-color: var(--basic-darkred);
+}
+
+.plate-perfs__title {
+  position: absolute;
+  font-family: Cuprum;
+  font-style: normal;
+  font-weight: bold;
+  text-transform: uppercase;
+  font-size: 36px;
+  line-height: 36px;
+  top: 22px;
+  left: 25px;
+}
+
+.plate-perfs__description {
+  position: absolute;
+  top: 62px;
+  left: 23px;
 }
 
 .more-company {
@@ -1167,10 +1226,10 @@ input.search:focus + label>svg {
 
 .map-pic {
   margin-top: 32px;
-  margin-bottom: 17px;
+  margin-bottom: 22px;
 }
 
-.category-plate h2 {
+.plate-title {
   font-family: Cuprum, Arial, sans-serif;
   font-size: 24px;
   line-height: 30px;
@@ -1263,9 +1322,11 @@ ul,
   align-items: center;
 }
 
-.page-navigation a:active {
+.page-navigation li:hover {
+  border-color: var(--basic-extra-greylight);
+}
+.page-navigation li:active {
   border: 1px solid var(--basic-red);
-  border-radius: 2px;
 }
 
 .page-navigation li:nth-child(4){
@@ -1629,4 +1690,12 @@ fieldset {
 
 .buying-bookmark {
   display: none;
+}
+
+.visually-hidden {
+  position: absolute;
+  clip: rect(0 0 0 0);
+  width: 1px;
+  height: 1px;
+  margin: -1px;
 }
