add to popular manufacturer :pseudo

--- a/css/styles.css
+++ b/css/styles.css
@@ -15,6 +15,7 @@
   --basic-white: #ffffff;
   --basic-white-opacity-05: rgba( 255,255,255, 0.5);
   --basic-white-opacity-03: rgba( 255,255,255, 0.3);
+  --basic-white-opacity-015: rgba(0, 0, 0, 0.15);
   --basic-extra-lightgrey: #F3F7F9;
   --special-grey: #3D546F;
   --special-extra-dark: #1D2739;
@@ -732,6 +733,15 @@ input.search:focus + label>svg {
 .popular-manufacturer li {
   height: 145px;
 }
+
+.popular-manufacturer li:hover {
+  filter: drop-shadow(0px 4px 20px var(--basic-white-opacity-015));
+}
+
+.popular-manufacturer li:active {
+  opacity: 0.5;
+}
+
 
 /* category-plate */
 
